@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-06T01:05:49Z",
-  "count_outdated" : 701,
-  "uniques_outdated" : 396,
-  "count" : 720,
+  "timestamp" : "2022-12-06T16:18:59Z",
+  "count_outdated" : 703,
+  "uniques_outdated" : 397,
+  "count" : 721,
   "uniques" : 404,
   "clones" : [
-    {
-      "timestamp": "2022-11-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-23T00:00:00Z",
       "count": 3,
