@@ -1,3 +1,11 @@
+2022-12-06T16:18:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3631346384 # 1094
+* notice: last 14d: unq all: 4 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 396 701 / 404 720
+* notice: next accum: outdated-unq outdated-all / unq all: 397 703 / 404 721
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-22] / []
+
 2022-12-06T01:05:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3625457893 # 1092
 * notice: last 14d: unq all: 4 19
